<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:clickable="true"
    android:focusable="true"
    tools:context=".detail.DetailFragment">

    <include
        android:id="@+id/toolbar_detail"
        layout="@layout/toolbar_detail" />

    <ImageView
        android:id="@+id/img_cover"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/img_cover"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_detail"
        android:contentDescription="@string/image_cover" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_image_detail"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/stroke"
        android:padding="7dp"

        app:layout_constraintBottom_toBottomOf="@+id/img_cover"
        app:layout_constraintEnd_toEndOf="@+id/img_cover"
        app:layout_constraintStart_toStartOf="@+id/img_cover"
        app:layout_constraintTop_toTopOf="@+id/img_cover" />

    <TextView
        android:id="@+id/tv_name_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center_horizontal"
        android:includeFontPadding="false"

        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/civ_image_detail" />

    <TextView
        android:id="@+id/tv_company_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center_horizontal"
        android:includeFontPadding="false"

        android:textAlignment="center"
        android:textColor="@color/secondary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_detail" />

    <TextView
        android:id="@+id/tv_location_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:gravity="center_horizontal"
        android:includeFontPadding="false"

        android:textAlignment="center"
        android:textColor="@color/secondary"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_company_detail" />

    <LinearLayout
        android:id="@+id/container_repository"
        style="@style/ContainerBox"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toStartOf="@+id/container_followers"
        app:layout_constraintTop_toBottomOf="@+id/tv_location_detail">

        <TextView
            android:id="@+id/tv_repository_detail"
            style="@style/ContainerBoxNumber" />

        <TextView
            style="@style/ContainerBoxSubtitle"
            android:text="@string/subtitle_repository" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_followers"
        style="@style/ContainerBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_location_detail">

        <TextView
            android:id="@+id/tv_followers_detail"
            style="@style/ContainerBoxNumber" />

        <TextView
            style="@style/ContainerBoxSubtitle"
            android:text="@string/subtitle_followers"


            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_following"
        style="@style/ContainerBox"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@+id/container_followers"
        app:layout_constraintTop_toBottomOf="@+id/tv_location_detail">

        <TextView
            android:id="@+id/tv_following_detail"
            style="@style/ContainerBoxNumber" />

        <TextView
            style="@style/ContainerBoxSubtitle"
            android:text="@string/subtitle_following" />
    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"

        android:contentDescription="@string/button_add"
        android:focusable="true"
        android:src="@drawable/ic_favorite_fill"
        app:backgroundTint="@color/pink"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white" />

    <ProgressBar
        android:id="@+id/progress_bar_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar_detail" />


</androidx.constraintlayout.widget.ConstraintLayout>